# Indicator-of-Compromise-Enrichment

./: Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  test_app.py
ioc_type/: handle_domain.py  handle_hash.py  handle_ip.py  handle_url.py
modules/: abuseipdb.py  alienvault.py  apininjas.py  blacklistchecker.py  greynois.py  ipgeolocation.py  ipqualityscore.py  urlscan_io.py  virustotal.py  whois.py
templates/: index.html  record_domain.html  record_hash.html  record_ipv4.html  record_url.html  search.html
